--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <button id="submitButton">إرسال السؤال</button>
         <div id="outputText"></div>
     </div>
+    
+    <!-- ربط ملف JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
