--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <h1>المفتي الذكي</h1>
-        <p>اكتب سؤالك، وسأقدم لك الفتوى بناءً على الموجهات الخاصة.</p>
+        <p>اكتب سؤالك، و وسأجيبك وفق رؤية دولة الإمارات العربية المتحدة.</p>
         <textarea id="userInput" placeholder="اكتب سؤالك هنا..."></textarea><br>
-        <button id="submitButton">إرسال السؤال</button>
+        <button id="submitButton">م ما سؤالك للمفتي الذكي </button>
         <div id="outputText"></div>
     </div>
     
