--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             background-color: #f9f9f9;
-            min-height: 100px;
+            min-height: 200px;
             font-size: 16px;
             color: #333;
+            width: 100%;
+            max-width: 600px;  /* تحديد الحد الأقصى لعرض مربع الإجابة */
         }
 
         textarea {
@@ -49,13 +51,6 @@
             width: 80%;
             margin: auto;
         }
-
-        /* التأكد من أن البوت يظهر داخل التصميم */
-        #chatbase {
-            margin-top: 20px;
-            width: 100%;
-            min-height: 500px;
-        }
     </style>
 </head>
 <body>
@@ -74,12 +69,9 @@
 
         <!-- مربع عرض الإجابة -->
         <div id="outputText"></div>
-        
-        <!-- تحميل السكربت الخاص بـ Chatbase -->
-        <div id="chatbase"></div>
     </div>
 
-    <!-- إضافة الكود الخاص بـ Chatbase -->
+    <!-- إضافة الكود الخاص بـ Chatbase بشكل مخفي -->
     <script>
         (function(){
             if(!window.chatbase || window.chatbase("getState") !== "initialized"){
@@ -87,29 +79,4 @@
                     if (!window.chatbase.q) { window.chatbase.q = [] }
                     window.chatbase.q.push(arguments)
                 };
-                window.chatbase = new Proxy(window.chatbase, {
-                    get(target, prop) {
-                        if (prop === "q") { return target.q }
-                        return (...args) => target(prop, ...args)
-                    }
-                })
-            }
-            const onLoad = function(){
-                const script = document.createElement("script");
-                script.src = "https://www.chatbase.co/embed.min.js";
-                script.id = "ExUT-vyE-AcS2ur1EJnAW";
-                script.domain = "www.chatbase.co";
-                document.body.appendChild(script);
-            };
-
-            if (document.readyState === "complete") {
-                onLoad();
-            } else {
-                window.addEventListener("load", onLoad);
-            }
-        })();
-    </script>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                window.c
