--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <style>
         #outputText {
             margin-top: 20px;
-            padding: 15px;
+            padding: 20px;
             border: 1px solid #ccc;
             border-radius: 8px;
             background-color: #f9f9f9;
-            min-height: 200px;
-            font-size: 16px;
+            min-height: 300px;  /* زيادة الارتفاع */
+            font-size: 18px;
             color: #333;
             width: 100%;
             max-width: 600px;  /* تحديد الحد الأقصى لعرض مربع الإجابة */
+            overflow-y: auto;  /* يسمح بالتمرير العمودي إذا كانت الإجابة طويلة */
         }
 
         textarea {
@@ -79,4 +80,29 @@
                     if (!window.chatbase.q) { window.chatbase.q = [] }
                     window.chatbase.q.push(arguments)
                 };
-                window.c
+                window.chatbase = new Proxy(window.chatbase, {
+                    get(target, prop) {
+                        if (prop === "q") { return target.q }
+                        return (...args) => target(prop, ...args)
+                    }
+                })
+            }
+            const onLoad = function(){
+                const script = document.createElement("script");
+                script.src = "https://www.chatbase.co/embed.min.js";
+                script.id = "ExUT-vyE-AcS2ur1EJnAW";
+                script.domain = "www.chatbase.co";
+                document.body.appendChild(script);
+            };
+
+            if (document.readyState === "complete") {
+                onLoad();
+            } else {
+                window.addEventListener("load", onLoad);
+            }
+        })();
+    </script>
+
+    <script src="script.js"></script>
+</body>
+</html>
