--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             background-color: #f9f9f9;
-            min-height: 300px;  /* زيادة الارتفاع */
+            min-height: 200px;
             font-size: 18px;
             color: #333;
             width: 100%;
@@ -72,37 +72,7 @@
         <div id="outputText"></div>
     </div>
 
-    <!-- إضافة الكود الخاص بـ Chatbase بشكل مخفي -->
-    <script>
-        (function(){
-            if(!window.chatbase || window.chatbase("getState") !== "initialized"){
-                window.chatbase = (...arguments) => {
-                    if (!window.chatbase.q) { window.chatbase.q = [] }
-                    window.chatbase.q.push(arguments)
-                };
-                window.chatbase = new Proxy(window.chatbase, {
-                    get(target, prop) {
-                        if (prop === "q") { return target.q }
-                        return (...args) => target(prop, ...args)
-                    }
-                })
-            }
-            const onLoad = function(){
-                const script = document.createElement("script");
-                script.src = "https://www.chatbase.co/embed.min.js";
-                script.id = "ExUT-vyE-AcS2ur1EJnAW";
-                script.domain = "www.chatbase.co";
-                document.body.appendChild(script);
-            };
-
-            if (document.readyState === "complete") {
-                onLoad();
-            } else {
-                window.addEventListener("load", onLoad);
-            }
-        })();
-    </script>
-
+    <!-- لا حاجة لإضافة Chatbase أو iframe -->
     <script src="script.js"></script>
 </body>
 </html>
