--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             background-color: #f9f9f9;
-            min-height: 200px;
+            min-height: 400px;  /* زيادة الارتفاع */
             font-size: 18px;
             color: #333;
             width: 100%;
             max-width: 600px;  /* تحديد الحد الأقصى لعرض مربع الإجابة */
             overflow-y: auto;  /* يسمح بالتمرير العمودي إذا كانت الإجابة طويلة */
+            position: relative;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
         }
 
         textarea {
@@ -68,40 +75,17 @@
         <!-- زر مسح السؤال -->
         <button id="clearButton">مسح السؤال</button>
 
-        <!-- مربع عرض الإجابة -->
-        <div id="outputText"></div>
+        <!-- مربع عرض الإجابة (البوت داخل المربع) -->
+        <div id="outputText">
+            <!-- تضمين Chatbase عبر iframe داخل مربع الإجابة -->
+            <iframe
+                src="https://www.chatbase.co/chatbot-iframe/ExUT-vyE-AcS2ur1EJnAW"
+                width="100%"
+                style="height: 100%; border-radius: 8px;"
+                frameborder="0"
+            ></iframe>
+        </div>
     </div>
-
-    <!-- إضافة الكود الخاص بـ Chatbase بشكل مخفي -->
-    <script>
-        (function() {
-            if (!window.chatbase || window.chatbase("getState") !== "initialized") {
-                window.chatbase = (...arguments) => {
-                    if (!window.chatbase.q) { window.chatbase.q = [] }
-                    window.chatbase.q.push(arguments)
-                };
-                window.chatbase = new Proxy(window.chatbase, {
-                    get(target, prop) {
-                        if (prop === "q") { return target.q }
-                        return (...args) => target(prop, ...args)
-                    }
-                })
-            }
-            const onLoad = function() {
-                const script = document.createElement("script");
-                script.src = "https://www.chatbase.co/embed.min.js";
-                script.id = "ExUT-vyE-AcS2ur1EJnAW";
-                script.domain = "www.chatbase.co";
-                document.body.appendChild(script);
-            };
-
-            if (document.readyState === "complete") {
-                onLoad();
-            } else {
-                window.addEventListener("load", onLoad);
-            }
-        })();
-    </script>
 
     <script src="script.js"></script>
 </body>
