--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             color: #333;
             width: 100%;
             max-width: 600px;  /* تحديد الحد الأقصى لعرض مربع الإجابة */
-            overflow-y: auto;  /* يسمح بالتمرير العمودي إذا كانت الإجابة طويلة */
             position: relative;
         }
 
         iframe {
             width: 100%;
             height: 100%;
+            border-radius: 8px;
             border: none;
         }
 
